tests/NormalTests/paczka1/small_fuzzy/87507922.err
Error in line 7: A671 A155 80,2
Error in line 6: exf S825 57,5
